fix: Resolve scatter legend cutoff bug

--- a/Homework3/ntzhao/styles.css
+++ b/Homework3/ntzhao/styles.css
@@ -10,6 +10,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   width: 100%;
+  overflow: hidden;
 
   --header-height: 60px;
   --page-padding: 20px;
